[package]
name = "fastcwt"
version = "0.1.8"
authors = ["Minjae Kim <minjaekim@mkaudio.company>"]
description = "Rust-lang Continuous Wavelet Transform(CWT) library inspired by fCWT."
documentation = "https://docs.rs/fastcwt"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/minjaekimartist/fastcwt"
repository = "https://github.com/minjaekimartist/fastcwt"
keywords = ["cwt", "transform", "wavelet"]
categories = ["Algorithm", "Math", "Science", "Signal-Processing"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
no_denormals = "0.1.2"
rustfft = "6.2.0"
rayon = "1.10.0"

[dev-dependencies]
rand = "0.8.5"